Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34676

Store prepareSeqno of commits and aborts on disk

    XMLWordPrintable

Details

    • Triaged
    • No
    • KV-Engine Mad-Hatter Beta

    Description

      We need the prepare seqno to be correct when backfilling from disk to solve https://issues.couchbase.com/browse/MB-34542?focusedCommentId=337261&page=com.atlassian.jira.plugin.system.issuetabpanels%3Acomment-tabpanel#comment-337261. It will also allow us to simplify some other changes made recently too where we allowed aborts with a prepare seqno of 0. http://review.couchbase.org/#/c/110714/

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ben.huddleston Ben Huddleston
            ben.huddleston Ben Huddleston
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty